2001-11-25  Braden McDaniel  <braden@endoframe.com>

        * Moved NodeVisitor implementation to `node.h' and `node.cpp'.

2001-11-24  Braden McDaniel  <braden@endoframe.com>

        * Placed libopenvrml members in OpenVRML namespace. Placed
          libopenvrml-gl members in OpenVRML::GL namespace.

        * Consolidated bounding volume classes in `bvolume.h' and
          `bvolume.cpp'.

        * Consolidated Node and NodeType in `node.h' and `node.cpp'.

2001-11-24  Thomas Flynn <tflynn@users.sourceforge.net>

	* Fix bug in ScriptJDK initialize call introduced with recent
	  changes to scripting interface.

2001-11-19  Braden McDaniel  <braden@endoframe.com>

        * Replace ScriptObject with Script. Script has methods that more
	  directly reflect the functionality expected of scripts.

2001-11-18  Thomas Flynn <tflynn@users.sourceforge.net>

	* Add JSAI classes to Doxygen list.

	* Readd exception classes to script.jar for JSAI.

	* Add additional javadoc comments to java files.

	* Implement 13 more methods in ScriptJDK. Only 8 left!

2001-11-11  Braden McDaniel  <braden@endoframe.com>

        * Move doc-comments to implementation files for VrmlBVolume,
          VrmlAABox, and VrmlBSphere.

        * Use dynamic_cast instead of VrmlBVolume::toBSphere() and
          VrmlBVolume::toAABox().

2001-11-05  Thomas Flynn <tflynn@users.sourceforge.net>

	* Implement 6 more methods in ScriptJDK.cpp

	* Attempt to conform to coding standard for line length.

2001-11-01  Braden McDaniel  <braden@endoframe.com>

        * Some minor improvements to VrmlNodePtr.

        * Use VrmlNode * instead of VrmlNodePtr to store references to
          named nodes in VrmlNamespace. This avoids a circular reference
          (and should fix that annoying crash on exit).

2001-10-30  S. K. Bose  <bose@pavan.barc.ernet.in>

        * Improve Navigation in "Examine Mode". Navigation speed is
          taken care.

2001-10-27  Braden McDaniel  <braden@endoframe.com>
