@@ -2,6 +2,9 @@
 
         * Moved NodeVisitor implementation to `node.h' and `node.cpp'.
 
+        * Fixed some dynamic_casts in the JavaScript binding left over
+          from the renaming.
+
 2001-11-24  Braden McDaniel  <braden@endoframe.com>
 
         * Placed libopenvrml members in OpenVRML namespace. Placed
